Update to Chromium version 133.0.6886.0 (#1393452)

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -891,7 +891,6 @@ source_set("libcef_static") {
     "//chrome:strings",
     "//chrome/common:buildflags",
     "//chrome/services/printing:lib",
-    "//components/cdm/renderer",
     "//components/certificate_transparency",
     "//components/component_updater",
     "//components/content_settings/core/browser",
@@ -1344,6 +1343,7 @@ make_pack_header("strings") {
     "$root_gen_dir/extensions/strings/grit/extensions_strings.h",
     "$root_gen_dir/services/strings/grit/services_strings.h",
     "$root_gen_dir/third_party/blink/public/strings/grit/blink_strings.h",
+    "$root_gen_dir/third_party/blink/public/strings/grit/permission_element_generated_strings.h",
     "$root_gen_dir/third_party/blink/public/strings/grit/permission_element_strings.h",
     "$root_gen_dir/ui/strings/grit/app_locale_settings.h",
     "$root_gen_dir/ui/strings/grit/auto_image_annotation_strings.h",
@@ -1363,6 +1363,7 @@ make_pack_header("strings") {
     "//extensions/strings",
     "//services/strings",
     "//third_party/blink/public/strings",
+    "//third_party/blink/public/strings:permission_element_generated_strings",
     "//third_party/blink/public/strings:permission_element_strings",
     "//ui/strings:app_locale_settings",
     "//ui/strings:auto_image_annotation_strings",
