Add NUM_VALUES for enums and size for structs (see #3836)
API versioning requires that enumerations end with a count value
(`*_NUM_VALUES`) and structs begin with a size value (`size_t size`).
Wrapper templates are updated to support structs with different size
values indicating different versions.

To test:
Run `ceftests --gtest_filter=ApiVersionTest.StructVersion*`

--- a/cmake/cef_variables.cmake.in
+++ b/cmake/cef_variables.cmake.in
@@ -186,6 +186,8 @@ if(OS_LINUX)
   if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     list(APPEND CEF_CXX_COMPILER_FLAGS
       -Wno-attributes             # The cfi-icall attribute is not supported by the GNU C++ compiler
+      -Wno-array-bounds           # Silence "is partly outside array bounds" errors with runtime size check in wrapper
+      -Wno-stringop-overflow      # Silence "overflows the destination" errors with runtime size check in wrapper
       )
   endif()
 
