win: Fix sandbox compilation errors

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -516,6 +516,9 @@ patches = [
     # win: Disable use of Rust for JSON parsing with cef_sandbox.
     # Enables the fallback to C++ that was removed in
     # https://crrev.com/9ddc1624637c8cfa8ef50a95abd779e0ba4d67f6
+    #
+    # Avoid inclusion of undefined PartitionAlloc dependencies in Dawn after
+    # https://crrev.com/4dacf2b61c359950d2c2f1b5f9b9d079a01290a4
     'name': 'base_sandbox_2743',
   },
   {
