Fix build error with enable_backup_ref_ptr_instance_tracer=true
See https://crbug.com/387277990

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -761,5 +761,12 @@ patches = [
     # Expose Mojo Connector error state to Receiver disconnect handlers.
     # https://github.com/chromiumembedded/cef/issues/3664
     'name': 'mojo_connect_result_3664'
+  },
+  {
+    # Fix error: static assertion failed due to requirement 'sizeof(cc::Layer)
+    # == sizeof(cc::SameSizeAsLayer)' when building with
+    # enable_backup_ref_ptr_instance_tracer=true.
+    # https://issues.chromium.org/issues/387277990
+    'name': 'cc_layer_387277990'
   }
 ]
