Update to Chromium version 134.0.6998.0 (#1415337)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -519,6 +519,9 @@ patches = [
     #
     # Avoid inclusion of undefined PartitionAlloc dependencies in Dawn after
     # https://crrev.com/4dacf2b61c359950d2c2f1b5f9b9d079a01290a4
+    #
+    # win: Fix extra qualification on member 'basic_common_reference'
+    # https://chromium-review.googlesource.com/c/chromium/src/+/6265643
     'name': 'base_sandbox_2743',
   },
   {
@@ -761,12 +764,5 @@ patches = [
     # Expose Mojo Connector error state to Receiver disconnect handlers.
     # https://github.com/chromiumembedded/cef/issues/3664
     'name': 'mojo_connect_result_3664'
-  },
-  {
-    # Fix error: static assertion failed due to requirement 'sizeof(cc::Layer)
-    # == sizeof(cc::SameSizeAsLayer)' when building with
-    # enable_backup_ref_ptr_instance_tracer=true.
-    # https://issues.chromium.org/issues/387277990
-    'name': 'cc_layer_387277990'
   }
 ]
