Add visualization for Chrome configuration changes (fixes #3892)
- Add new API to retrieve/observe configuration values.
- cefclient: Add https://tests/config to inspect configuration
  values in real time.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -764,5 +764,14 @@ patches = [
     # Expose Mojo Connector error state to Receiver disconnect handlers.
     # https://github.com/chromiumembedded/cef/issues/3664
     'name': 'mojo_connect_result_3664'
+  },
+  {
+    # Support for configuration accessors/observers.
+    # - Allow pref_service::Registrar access to
+    #   PrefService::[Add|Remove]PrefObserver.
+    # - Enable SyntheticTrialsActiveGroupIdProvider::GetGroups in Release
+    #   builds.
+    # https://github.com/chromiumembedded/cef/issues/3892
+    'name': 'config_3892'
   }
 ]
