--- a/BUILD.gn
+++ b/BUILD.gn
@@ -677,6 +677,8 @@ source_set("libcef_static") {
     "libcef/browser/scheme_impl.cc",
     "libcef/browser/server_impl.cc",
     "libcef/browser/server_impl.h",
+    "libcef/browser/setting_helper.cc",
+    "libcef/browser/setting_helper.h",
     "libcef/browser/simple_menu_model_impl.cc",
     "libcef/browser/simple_menu_model_impl.h",
     "libcef/browser/ssl_info_impl.cc",
