Update to Chromium version 135.0.7049.0 (#1427262)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -519,9 +519,6 @@ patches = [
     #
     # Avoid inclusion of undefined PartitionAlloc dependencies in Dawn after
     # https://crrev.com/4dacf2b61c359950d2c2f1b5f9b9d079a01290a4
-    #
-    # win: Fix extra qualification on member 'basic_common_reference'
-    # https://chromium-review.googlesource.com/c/chromium/src/+/6265643
     'name': 'base_sandbox_2743',
   },
   {
@@ -773,5 +770,10 @@ patches = [
     #   builds.
     # https://github.com/chromiumembedded/cef/issues/3892
     'name': 'config_3892'
+  },
+  {
+    # Linux: Allow GTK3 on GNOME with --gtk-version flag.
+    # https://chromium-review.googlesource.com/c/chromium/src/+/6334084
+    'name': 'gtk_compat_6334084'
   }
 ]
