alloy: Fix display of modal JS dialogs (fixes #3818)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -258,6 +258,12 @@ patches = [
     'name': 'chrome_browser_dialogs_native',
   },
   {
+    # Fix usage of JavaScript tab modal dialogs with Alloy style browsers.
+    # Modifies the logic added in https://crrev.com/78ce55cbc0.
+    # https://github.com/chromiumembedded/cef/issues/3818
+    'name': 'chrome_browser_dialogs_jsmodal',
+  },
+  {
     # Support use of chrome Widget dialogs with CEF runtimes.
     # - Add gfx::AcceleratedWidget dialog parent argument to
     #   DialogDelegate::CreateDialogWidget for CEF windowless rendering.
