Update to Chromium version 136.0.7103.0 (#1440670)
- Win: Update to VS 2022 17.13.4 and WinSDK 10.0.26100.3323

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -219,6 +219,10 @@ patches = [
     # See related documentation in
     # libcef/browser/chrome/views/chrome_browser_frame.h.
     # https://github.com/chromiumembedded/cef/issues/2969
+    #
+    # Properly disable 3-dot > "Open glic" menu item to avoid crash in
+    # GlicKeyedService::ToggleUI.
+    # https://issues.chromium.org/issues/408163318
     'name': 'chrome_runtime_views',
   },
   {
@@ -778,8 +782,8 @@ patches = [
     'name': 'config_3892'
   },
   {
-    # Linux: Allow GTK3 on GNOME with --gtk-version flag.
-    # https://chromium-review.googlesource.com/c/chromium/src/+/6334084
-    'name': 'gtk_compat_6334084'
+    # Fix DCHECK_EQ in SchemefulSite with custom standard schemes.
+    # https://issues.chromium.org/issues/408329644
+    'name': 'net_schemeful_site_408329644'
   }
 ]
