osr: Avoid crash in WebContentsImpl::GetSize/Resize

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -136,6 +136,8 @@ patches = [
     #
     # Add WebContentsObserver::RenderWidgetCreated.
     # https://github.com/chromiumembedded/cef/issues/3308
+    #
+    # osr: Avoid crash in WebContentsImpl::GetSize/Resize.
     'name': 'web_contents_1257_1565',
   },
   {
