--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -68,6 +68,9 @@ patches = [
   },
   {
     # Enable popups in offscreen rendering on MacOS.
+    #
+    # Enable moveTo()/moveBy() for Document picture-in-picture popups.
+    # https://github.com/chromiumembedded/cef/issues/3714
     'name': 'webkit_popups',
   },
   {
