Support JavaScript window.moveTo/By() and resizeTo/By() (fixes #698)
Adds new CefDisplayHandler::OnContentsBoundsChange and
CefDisplayHandler::GetRootWindowScreenRect callbacks.

cefclient: Implement the above callbacks and call
CefBrowserHost::NotifyScreenInfoChanged when the root window
bounds change.

cefclient: osr: Use real screen bounds by default. Pass
`--fake-screen-bounds` for the old default behavior.

Load https://tests/window in cefclient for additional
implementation details and usage examples.

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -393,7 +393,10 @@ patches = [
     #
     # Windows: Fix crash during window creation.
     # https://bugs.chromium.org/p/chromium/issues/detail?id=761389
-    'name': 'rwh_background_color_1984',
+    #
+    # Add RWHVAura::SetRootWindowBoundsCallback.
+    # https://github.com/chromiumembedded/cef/issues/3920
+    'name': 'renderer_host_aura',
   },
   {
     # Expose RFH via NavigationHandle for retrieval in DidFinishNavigation on
