--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -126,6 +126,10 @@ patches = [
     # win: Delay enablement of native occlusion tracking until the initially-
     # minimized window is restored for the first time.
     # https://github.com/chromiumembedded/cef/issues/3638
+    #
+    # win: Don't call DwmSetWindowAttribute when the browser has an external
+    # parent. This call only applies for top-level windows.
+    # https://issuetracker.google.com/issues/41241478
     'name': 'views_widget',
   },
   {
@@ -224,10 +228,6 @@ patches = [
     # See related documentation in
     # libcef/browser/chrome/views/chrome_browser_frame.h.
     # https://github.com/chromiumembedded/cef/issues/2969
-    #
-    # Properly disable 3-dot > "Open glic" menu item to avoid crash in
-    # GlicKeyedService::ToggleUI.
-    # https://issues.chromium.org/issues/408163318
     'name': 'chrome_runtime_views',
   },
   {
@@ -354,7 +354,8 @@ patches = [
     'name': 'embedder_product_override',
   },
   {
-    # Fix Jumbo/component build dependency issue.
+    # Fix component build dependency issue.
+    # https://issues.chromium.org/issues/414506471
     'name': 'chrome_browser_safe_browsing',
   },
   {
@@ -632,6 +633,9 @@ patches = [
   },
   {
     # Create top-level widget type when Widget::InitParams::child is false.
+    #
+    # Allow access to deprecated "owned by widget" model.
+    # https://github.com/chromiumembedded/cef/issues/3924
     'name': 'ui_views_widget_type'
   },
   {
@@ -788,10 +792,5 @@ patches = [
     #   builds.
     # https://github.com/chromiumembedded/cef/issues/3892
     'name': 'config_3892'
-  },
-  {
-    # Fix DCHECK_EQ in SchemefulSite with custom standard schemes.
-    # https://issues.chromium.org/issues/408329644
-    'name': 'net_schemeful_site_408329644'
   }
 ]
