osr: linux: Fix crash with default JS modal dialogs (fixes #3921)

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -270,6 +270,9 @@ patches = [
     # Fix usage of JavaScript tab modal dialogs with Alloy style browsers.
     # Modifies the logic added in https://crrev.com/78ce55cbc0.
     # https://github.com/chromiumembedded/cef/issues/3818
+    #
+    # Fix crash with OSR browsers on Linux.
+    # https://github.com/chromiumembedded/cef/issues/3921
     'name': 'chrome_browser_dialogs_jsmodal',
   },
   {
